# talk

./: .gitmodules  Cargo.toml  README.md  build.rs
docs/: screen-vocabulary-plan.md
scripts/: convert-whisper-to-coreml.py  export_parakeet.py
src/: animations.rs  app.rs  audio.rs  buffer.rs  llm.rs  main.rs  overlay_ui.rs  panel.rs  processing.rs  state.rs  stt.rs  stt_parakeet.rs  stt_voxtral.rs  stt_whisper.rs  transcriber.rs  vad.rs  wake.rs  wake_sound.rs  wake_word.rs
