[package]
name = "voicer"
version = "0.1.0"
edition = "2024"

[dependencies]
whisper-rs = { version = "0.15", features = ["coreml"] }
cpal = "0.17"
ringbuf = "0.4"
ort = { version = "2.0.0-rc.11", features = ["ndarray", "coreml"] }
ndarray = "0.17"
anyhow = "1"
ctrlc = "3"
enigo = "0.2"
rustfft = "6"
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
