[package]
name = "voicer"
version = "0.1.0"
edition = "2024"

[features]
default = []
voxtral = ["cc"]

[build-dependencies]
cc = { version = "1", optional = true }

[dependencies]
whisper-rs = { version = "0.15", features = ["coreml"] }
cpal = "0.17"
ringbuf = "0.4"
ort = { version = "2.0.0-rc.11", features = ["ndarray", "coreml"] }
ndarray = "0.17"
anyhow = "1"
ctrlc = "3"
enigo = "0.2"
rustfft = "6"
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
iced = { version = "0.14", features = ["tokio"] }
tokio = { version = "1", features = ["time"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSApplication", "NSRunningApplication", "NSWindow", "NSColor", "NSPanel", "NSResponder",
    "NSStatusBar", "NSStatusItem", "NSMenu", "NSMenuItem",
    "NSButton", "NSControl", "NSStatusBarButton", "NSView",
] }
objc2-foundation = { version = "0.3", features = ["NSArray", "NSString", "NSThread"] }
objc2-core-foundation = "0.3"
